Prevent overlap of stars when shrink screen

--- a/client/components/Ratings.module.css
+++ b/client/components/Ratings.module.css
@@ -17,8 +17,8 @@
   line-height: 20.02px;
   text-align: start;
   width: 50%;
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
 }
 
@@ -30,7 +30,7 @@
   font-size: 14px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   .ratingsContainer{
     display: flex;
     flex-direction: column;
